--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bern's Portfolio</title>
+    <!--Favicon-->
+    <link rel="shortcut icon" type="image/x-icon" href="./src/assets/favicon.ico"/>
+
+    <title>Bernice Koh | Personal Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
